coolParser.py
# Generated from cool.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class coolParser ( Parser ):

    grammarFileName = "cool.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'@'", "'.'", "'~'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<-'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'=>'", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "<INVALID>", "'<'", "'<='", 
                     "'='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'(*'", "'*)'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "INHERITS", 
                      "TRUE", "FALSE", "ASSIGNMENT", "IF", "ELSE", "THEN", 
                      "FI", "WHILE", "LOOP", "POOL", "LET", "IN", "CASE", 
                      "OF", "ESAC", "CASEARR", "NEW", "ISVOID", "ADD", "MINUS", 
                      "MULT", "DIV", "NOT", "LT", "LE", "EQ", "TYPE", "STR", 
                      "ID", "INT", "OPEN_COMMENT", "CLOSE_COMMENT", "COMMENT", 
                      "ONE_LINE_COMMENT", "WHITESPACE" ]

    RULE_start = 0
    RULE_program = 1
    RULE_class_exp = 2
    RULE_feature = 3
    RULE_formal = 4
    RULE_declaration = 5
    RULE_expr = 6

    ruleNames =  [ "start", "program", "class_exp", "feature", "formal", 
                   "declaration", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    CLASS=11
    INHERITS=12
    TRUE=13
    FALSE=14
    ASSIGNMENT=15
    IF=16
    ELSE=17
    THEN=18
    FI=19
    WHILE=20
    LOOP=21
    POOL=22
    LET=23
    IN=24
    CASE=25
    OF=26
    ESAC=27
    CASEARR=28
    NEW=29
    ISVOID=30
    ADD=31
    MINUS=32
    MULT=33
    DIV=34
    NOT=35
    LT=36
    LE=37
    EQ=38
    TYPE=39
    STR=40
    ID=41
    INT=42
    OPEN_COMMENT=43
    CLOSE_COMMENT=44
    COMMENT=45
    ONE_LINE_COMMENT=46
    WHITESPACE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(coolParser.ProgramContext,0)


        def getRuleIndex(self):
            return coolParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = coolParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return coolParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EndContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(coolParser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnd" ):
                return visitor.visitEnd(self)
            else:
                return visitor.visitChildren(self)


    class Class_listContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def class_exp(self):
            return self.getTypedRuleContext(coolParser.Class_expContext,0)

        def program(self):
            return self.getTypedRuleContext(coolParser.ProgramContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_list" ):
                return visitor.visitClass_list(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = coolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.state = 21
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [coolParser.CLASS]:
                localctx = coolParser.Class_listContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.class_exp()
                self.state = 17
                self.match(coolParser.T__0)
                self.state = 18
                self.program()
                pass
            elif token in [coolParser.EOF]:
                localctx = coolParser.EndContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.match(coolParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(coolParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(coolParser.TYPE)
            else:
                return self.getToken(coolParser.TYPE, i)

        def INHERITS(self):
            return self.getToken(coolParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FeatureContext)
            else:
                return self.getTypedRuleContext(coolParser.FeatureContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_class_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_exp" ):
                return visitor.visitClass_exp(self)
            else:
                return visitor.visitChildren(self)




    def class_exp(self):

        localctx = coolParser.Class_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(coolParser.CLASS)
            self.state = 24
            self.match(coolParser.TYPE)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==coolParser.INHERITS:
                self.state = 25
                self.match(coolParser.INHERITS)
                self.state = 26
                self.match(coolParser.TYPE)


            self.state = 29
            self.match(coolParser.T__1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==coolParser.ID:
                self.state = 30
                self.feature()
                self.state = 31
                self.match(coolParser.T__0)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(coolParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FeatureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return coolParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FormalContext)
            else:
                return self.getTypedRuleContext(coolParser.FormalContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)


    class AttributeContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)
        def ASSIGNMENT(self):
            return self.getToken(coolParser.ASSIGNMENT, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = coolParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = coolParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(coolParser.ID)
                self.state = 41
                self.match(coolParser.T__3)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==coolParser.ID:
                    self.state = 42
                    self.formal()
                    self.state = 47
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==coolParser.T__4:
                        self.state = 43
                        self.match(coolParser.T__4)
                        self.state = 44
                        self.formal()
                        self.state = 49
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 55
                self.match(coolParser.T__5)
                self.state = 56
                self.match(coolParser.T__6)
                self.state = 57
                self.match(coolParser.TYPE)
                self.state = 58
                self.match(coolParser.T__1)
                self.state = 59
                self.expr(0)
                self.state = 60
                self.match(coolParser.T__2)
                pass

            elif la_ == 2:
                localctx = coolParser.AttributeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(coolParser.ID)
                self.state = 63
                self.match(coolParser.T__6)
                self.state = 64
                self.match(coolParser.TYPE)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==coolParser.ASSIGNMENT:
                    self.state = 65
                    self.match(coolParser.ASSIGNMENT)
                    self.state = 66
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def getRuleIndex(self):
            return coolParser.RULE_formal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = coolParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(coolParser.ID)
            self.state = 72
            self.match(coolParser.T__6)
            self.state = 73
            self.match(coolParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def ASSIGNMENT(self):
            return self.getToken(coolParser.ASSIGNMENT, 0)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def getRuleIndex(self):
            return coolParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = coolParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(coolParser.ID)
            self.state = 76
            self.match(coolParser.T__6)
            self.state = 77
            self.match(coolParser.TYPE)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==coolParser.ASSIGNMENT:
                self.state = 78
                self.match(coolParser.ASSIGNMENT)
                self.state = 79
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return coolParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LetInContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(coolParser.LET, 0)
        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(coolParser.DeclarationContext,i)

        def IN(self):
            return self.getToken(coolParser.IN, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetIn" ):
                return visitor.visitLetIn(self)
            else:
                return visitor.visitChildren(self)


    class MinusContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def MINUS(self):
            return self.getToken(coolParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinus" ):
                return visitor.visitMinus(self)
            else:
                return visitor.visitChildren(self)


    class NegationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(coolParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)


    class DispatchContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDispatch" ):
                return visitor.visitDispatch(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(coolParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(coolParser.LOOP, 0)
        def POOL(self):
            return self.getToken(coolParser.POOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class DivisionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def DIV(self):
            return self.getToken(coolParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivision" ):
                return visitor.visitDivision(self)
            else:
                return visitor.visitChildren(self)


    class NewObjectContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(coolParser.NEW, 0)
        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewObject" ):
                return visitor.visitNewObject(self)
            else:
                return visitor.visitChildren(self)


    class LessThanContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def LT(self):
            return self.getToken(coolParser.LT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessThan" ):
                return visitor.visitLessThan(self)
            else:
                return visitor.visitChildren(self)


    class BlockContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)


    class NegIntegerContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegInteger" ):
                return visitor.visitNegInteger(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(coolParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def THEN(self):
            return self.getToken(coolParser.THEN, 0)
        def ELSE(self):
            return self.getToken(coolParser.ELSE, 0)
        def FI(self):
            return self.getToken(coolParser.FI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class CaseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CASE(self):
            return self.getToken(coolParser.CASE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def OF(self):
            return self.getToken(coolParser.OF, 0)
        def ESAC(self):
            return self.getToken(coolParser.ESAC, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(coolParser.ID)
            else:
                return self.getToken(coolParser.ID, i)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(coolParser.TYPE)
            else:
                return self.getToken(coolParser.TYPE, i)
        def CASEARR(self, i:int=None):
            if i is None:
                return self.getTokens(coolParser.CASEARR)
            else:
                return self.getToken(coolParser.CASEARR, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCase" ):
                return visitor.visitCase(self)
            else:
                return visitor.visitChildren(self)


    class AddContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def ADD(self):
            return self.getToken(coolParser.ADD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class StarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def MULT(self):
            return self.getToken(coolParser.MULT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStar" ):
                return visitor.visitStar(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def ASSIGNMENT(self):
            return self.getToken(coolParser.ASSIGNMENT, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(coolParser.FALSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesis" ):
                return visitor.visitParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(coolParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)


    class CallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(coolParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)


    class StrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STR(self):
            return self.getToken(coolParser.STR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr" ):
                return visitor.visitStr(self)
            else:
                return visitor.visitChildren(self)


    class EqualContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def EQ(self):
            return self.getToken(coolParser.EQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)


    class IsVoidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(coolParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsVoid" ):
                return visitor.visitIsVoid(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(coolParser.TRUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)


    class LessEqualContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a coolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)

        def LE(self):
            return self.getToken(coolParser.LE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessEqual" ):
                return visitor.visitLessEqual(self)
            else:
                return visitor.visitChildren(self)


